[gd_scene load_steps=7 format=2]

[ext_resource path="res://tres/spriteframes/actors/test_2.tres" type="SpriteFrames" id=1]
[ext_resource path="res://entities/actor/actor.gd" type="Script" id=2]
[ext_resource path="res://assets/texture_front.png" type="Texture" id=3]
[ext_resource path="res://assets/texture_back.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.9627, 7.79011 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 12.1885, 22.4396 )

[node name="Actor" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "walk_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="HealthBar" type="TextureProgress" parent="."]
modulate = Color( 0.596078, 0.145098, 0.145098, 1 )
margin_left = -20.0
margin_top = -32.0
margin_right = 19.0
margin_bottom = -28.0
mouse_filter = 2
step = 0.1
value = 45.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureProgress" type="TextureProgress" parent="."]
margin_left = -20.0
margin_top = -27.0
margin_right = 19.0
margin_bottom = -23.0
mouse_filter = 2
max_value = 2.0
step = 0.001
value = 0.74
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OccupiedSpaceContainer" type="Node2D" parent="."]

[node name="OccupiedSpaceArea" type="Area2D" parent="OccupiedSpaceContainer"]
collision_layer = 524288
collision_mask = 524288

[node name="CollisionShape2D" type="CollisionShape2D" parent="OccupiedSpaceContainer/OccupiedSpaceArea"]
shape = SubResource( 2 )

[node name="AttackHolder" type="Node2D" parent="."]

[node name="PopUpHolder" type="Node2D" parent="."]
position = Vector2( 0, -50 )
